--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">ToyProjectApp</string>
     <string name="mnu_contact">연락처</string>
     <string name="mnu_gallery">갤러리</string>
+    <string name="item_contact_name">이름</string>
+    <string name="item_contact_age">00살</string>
+    <string name="item_contact_phone">000-0000-0000</string>
+    <string name="item_contact_country">국적</string>
 </resources>
