이미지 상세화면 (화면 회전X)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="item_contact_age">00살</string>
     <string name="item_contact_phone">000-0000-0000</string>
     <string name="item_contact_country">국적</string>
+    <string name="info_author">Author: author</string>
+    <string name="info_size">Size: widthxheight</string>
 </resources>
