--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,15 @@
     <string name="item_contact_country">국적</string>
     <string name="info_author">Author: author</string>
     <string name="info_size">Size: widthxheight</string>
+<!--다이얼로그-->
+    <string name="dialog_name">이름</string>
+    <string name="dialog_age">나이</string>
+    <string name="dialog_phone">연락처</string>
+    <string name="dialog_country">국적</string>
+    <string name="dialog_ok">확인</string>
+    <string name="dialog_cancel">취소</string>
+    <string name="hint_name">이름을 입력하세요.</string>
+    <string name="hint_age">나이를 입력하세요.</string>
+    <string name="hint_phone">연락처를 입력하세요.</string>
+    <string name="hint_country">국적을 입력하세요.</string>
 </resources>
